methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:29: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime13.FlowerCase'
override def run() {ligne()
             ^